app/scss/_layout.scss
body {

	font-family : Karla, sans-serif;

	nav {
		position : fixed;
		z-index : 1000;
		color : white;
		height : 90px;
		width : 100%;
		margin : 0 auto;
		text-align : left;
		font-size : 1.2em;
		font-family : Quicksand;
		font-weight : bolder;
		background-color : $bg_color_main_section;


		.nav-contents {
			width : $width_content;
			height : 100%;
			margin: 0 auto;

			&:after {
				display : table;
				content : '';
				clear : both;
			}
		}

		.section_links {
			width : 75%;
			float : left;
			ul {
				padding : 20px;
				list-style-type : none;

				li {
					padding : 10px;
					display : inline-block;
					opacity : 0.35;
					cursor : pointer;
					border-radius : 3px;
					&:hover {
						opacity : 1;
						transition : all 0.2s;
						background-color : darken($bg_color_main_section, 10%);
					}
				}

				.active {
					opacity : 1;
					background-color : darken($bg_color_main_section, 10%);
				}
			}
		} 

		.social_links {
			padding : 20px;
			width : 25%;
			float : right;
			line-height : 55px;
			text-align : right;
		}
		.social_icon {
			margin-left : 10px;
			cursor:pointer;
			opacity : 0.35;
			transition : all 0.2s;
			font-size : 1.5em;
			padding : 5px;
			&:hover {
				opacity : 1;
				transition : all 0.2s;
			}
		}

	}

	.section {
		width : 100vw;
		height : 100vh;
		background-color: $bg_color_main_section;
	}

	.button {
		width : 250px;
		height : 75px;
		text-align : center;
		cursor : pointer;
		border-radius : 4px;
	}

	.green_text {
		color : $color_logo !important;
	}

	.inner_content {
		width : $width_content;
		max-width : $max_width_content;
		margin : 0 auto;
	}

	.content_text_normal {
		font-family : 'Source Sans Pro';
		font-size : 1.25em;
	}

	.section--title {
		font-family : Quicksand;
		font-weight : bolder;
		letter-spacing : 2px;
		margin-top : 20px;
		color  : #FFFFFF;
	}

	.description {
		margin-top : 40px;
		h2 {
			font-family : 'Source Sans Pro';
			color : $color_logo;
		}
	}

 .section__main {
		
		@extend .section;

	 	// For the background image
		background-image : url('./images/cover_main.png');
		background-repeat : no-repeat;
		background-size : cover; 
		max-height : $max_height_main_section;
		min-height : $min_height_main_section;

		.content {
			@extend .inner_content;
			margin : 0;
			color : white;
			position: relative;
	  	top: 50%;
	  	left : 50%;
	  	transform : translate(-50%, -50%);
		}

		.main_inout_logo {
			position: relative;
			z-index :0;
		}

		#main_logo {
			width : 494px;
			height : 495px;
			background-image : url('images/main_inout_logo.png');
			background-repeat : no-repeat;
			margin : 0 auto;
		}

		.button__applynow {
			@extend .button;
			
			line-height : 75px;
			background: $color_button_apply;
			box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.33), inset 0px -3px 0px 0px rgba(0,0,0,0.21);
			font-family: Quicksand;
			font-weight : bolder;
			font-size: 24px;
			text-shadow : 0px 1px rgba(0, 0, 0, 0.15); 
			color: $bg_color_main_section;
			margin : 0 auto;
			margin-top : 6%;
			transition : all 0.15s;

			&:hover {
				box-shadow: 0px 7px 20px 0px rgba(0,0,0,0.4), inset 0px -3px 0px 0px rgba(0,0,0,0.21);
				transition : all 0.2s cubic-bezier(.12,.64,.59,1.47);
				// transform : scale(1.07);
			}
		}

		.location_and_date {
			position: relative;
			background: darken($bg_color_main_section, 5%);
			border : 1px solid darken($bg_color_main_section, 10%);
			width : 680px;
			padding : 10px;
			border-radius: 2px;
			font-family: Karla;
			text-align : center;
			font-size: 18px;
			color: #FFFFFF;
			letter-spacing: 1px;
			line-height: 22px;
			margin : 0 auto;
			margin-top : -8%;
			z-index :10;
			box-shadow : 0px 1px 2px rgba(0, 0, 0, 0.2);
		}
	}

	.section__about {
		@extend .section;
		background-color : $bg_color_about_section;
		border-top : 4px dashed $bg_color_main_section;
		height : auto;

		.content__about {
			@extend .inner_content;		
			color  : white;
			padding : 20px;
			padding-bottom : 111px;

			h1.title {
				@extend .section--title;
			}
		}
	}

	.section__faq {
		@extend .section;
		height : auto;
		border-top : 4px dashed $bg_color_about_section;

		background-color : $bg_color_faq_section;
		padding: 20px;

		h1.title {
			@extend .section--title;
		}

		.description {
			margin-top : -10px;
			h2 {
				color : saturate(lighten($color_logo, 2%), 5%);
			}
		}

		.content__faq {
			@extend .inner_content;
			padding: 20px;
			color : white;
			padding-bottom : 92px;
		}
	}

	.section__schedule {
		@extend .section;
		border-top : 4px dashed $bg_color_faq_section;
		height : auto;

		background-color : $bg_color_schedule_section;
		padding : 20px;

		h1.title {
			@extend .section--title;
		}

		.description {
			margin-top : 45px;
		}


		.content__schedule {
			@extend .inner_content;
			padding : 20px;
			color : white;

			.schedule_card {
				width : 100%;
				height : auto;
				border-radius : 4px;
				box-shadow : 0px 2px 3px rgba(0, 0, 0, 0.2);
				background-color : #ffffff;
				margin-bottom : 120px;

				ul {
					list-style : none;
					// background-color : red;	
					overflow : scroll;
					margin-left : -40px;
				}

			}

			.schedule_card--title {
				font-family: 'Source Sans Pro';
				font-weight : 700;	
				font-size: 24px;
				color: #000000;
				line-height: 31px;
				text-align : center;
				margin : 25px 0px 25px 0px;
				padding-top : 25px;
			}

			.schedule_card--single_schedule{
				width : 100%;
				height : 50px;	
				margin-bottom : 10px;
				background-color : #576976;
				padding : 20px;
				font-family : 'Source Sans Pro';
				font-size : 1.3em;
				line-height : 10px;
				&:last-child {
					margin-bottom : 50px;
				}
			}

			.schedule_card--time {
				font-weight : 700;
			}

			.schedule_card--event {
				text-align : right;
			}

			.schedule_card__saturday {
				@extend .schedule_card;

				.schedule_card--single_schedule--saturday {
					@extend .schedule_card--single_schedule;
				}
			}

			.schedule_card__sunday {
				@extend .schedule_card;

				.schedule_card--single_schedule--sunday {
					@extend .schedule_card--single_schedule;
					background-color: #489AD8;
				}
			}

		}


		h1.title {
			@extend .section--title;
		}
	}

	.section__sponsors {
		@extend .section;
		border-top : 4px dashed $bg_color_schedule_section;
		padding: 20px;

		background-color : white;

		h1.title {
			@extend .section--title;
			color  : #000000;
		}


	}

}

